--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.7"  
 # command to install dependencies
 install:
-  - pip install .
+  - pip install -r requirements.txt
 # command to run tests
 script:
   - pytest
