--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r requires.txt
+  - pip install .
 # command to run tests
 script:
   - pytest
