--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,13 @@ python:
   - "3.7"  
 # command to install dependencies
 install:
-  - pip install -r requires.txt
+  - pip install -r requires.txt  
   - pip install .
+  - pip install git+https://github.com/musket-ml/classification_training_pipeline.git
+  - pip install git+https://github.com/musket-ml/segmentation_training_pipeline.git
+  - pip install git+https://github.com/musket-ml/segmentation_training_pipeline.git
+  - pip install git+https://github.com/musket-ml/musket_text.git
+  - pip install git+https://github.com/musket-ml/musket_all.git
 # command to run tests
 script:
   - pytest
