--- a/musket_docs/mkdocs.yml
+++ b/musket_docs/mkdocs.yml
@@ -35,6 +35,8 @@ nav:
 - Classification:
     - 'User guide': 'classification/index.md'
     - 'Reference': 'classification/reference.md'
+- Text:
+    - 'About': 'text/index.md'
 - Musket IDE:
     - 'Setup': 'ide/getting_started.md'
 #- Instance Segmentation:
